syntax = "proto3";

package bkg.v2;

import "google/protobuf/timestamp.proto";
import "common/v1/common.proto";

option go_package = "github.com/cloudfresco/sc-dcsa/internal/protogen/bkg/v2";

// The BkgShipmentSummaryService service definition.
service BkgShipmentSummaryService {
  rpc CreateBkgShipmentSummary(CreateBkgShipmentSummaryRequest) returns (CreateBkgShipmentSummaryResponse);
  rpc GetBkgShipmentSummaries(GetBkgShipmentSummariesRequest) returns (GetBkgShipmentSummariesResponse);
  rpc GetBkgShipmentSummaryByCarrierBookingReference(GetBkgShipmentSummaryByCarrierBookingReferenceRequest) returns (GetBkgShipmentSummaryByCarrierBookingReferenceResponse);
}

message CreateBkgShipmentSummaryRequest {
  string carrier_booking_reference = 1;
  string shipment_created_date_time = 2;
  string shipment_updated_date_time = 3;
  string terms_and_conditions = 4;
  string carrier_booking_request_reference = 5;
  string booking_document_status = 6;
  string user_id = 7;
  string user_email = 8;
  string request_id = 9;
}

message CreateBkgShipmentSummaryResponse {
  BkgShipmentSummary bkg_shipment_summary = 1;
}

message GetBkgShipmentSummariesRequest {
  string limit = 1;
  string next_cursor = 2;
  string user_email = 3;
  string request_id = 4;
}

message GetBkgShipmentSummariesResponse {
  repeated BkgShipmentSummary bkg_shipment_summaries = 1;
  string next_cursor = 2;
}

message BkgShipmentSummary {
  BkgShipmentSummaryD bkg_shipment_summary_d = 1;
  BkgShipmentSummaryT bkg_shipment_summary_t = 2;
  common.v1.CrUpdUser cr_upd_user = 3;
  common.v1.CrUpdTime cr_upd_time = 4;
}

message BkgShipmentSummaryD {
  uint32 id = 1;
  bytes uuid4 = 2;
  string id_s = 3;
  string carrier_booking_reference = 4;
  string terms_and_conditions = 5;
  string carrier_booking_request_reference = 6;
  string booking_document_status = 7;
}

message BkgShipmentSummaryT {
  google.protobuf.Timestamp shipment_created_date_time = 1;
  google.protobuf.Timestamp shipment_updated_date_time = 2;
}

message GetBkgShipmentSummaryByCarrierBookingReferenceRequest {
  string carrier_booking_reference = 1;
  string user_email = 2;
  string request_id = 3;
}

message GetBkgShipmentSummaryByCarrierBookingReferenceResponse {
  BkgShipmentSummary bkg_shipment_summary = 1;
}
